--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -27,3 +27,11 @@
 			url('../resources/fonts/sourceserifpro/SourceSerifPro-Regular.ttf')
 			format('truetype');
 }
+
+@font-face {
+	font-family: 'Glyphicons-Halflings-Regular';
+	src: 	url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff2')	format("embedded-opentype"),
+			url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff2')	format("woff2"),
+			url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff')	format("woff"),
+			url('../packages/bootstrap/fonts/glyphicons-halflings-regular.ttf')		format('truetype');
+}
