--- a/sass/stream.scss
+++ b/sass/stream.scss
@@ -48,7 +48,7 @@
     }
 
     /*Allows for clean connection to stream footer*/
-	#article-stream {
+	#left .stream {
 		border-radius: 4px 4px 0 0;
 		border-bottom: none;
 	}
