--- a/styles/card.css
+++ b/styles/card.css
@@ -2,7 +2,7 @@
 /*Light*/
 /*Dark*/
 /* line 5, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card {
+.card {
   min-height: 6.5em;
   max-height: 6.5em;
   height: 6.5em;
@@ -16,18 +16,18 @@
 }
 
 /* line 20, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card:hover {
+.card:hover {
   background: #f1f1f1;
   cursor: pointer;
 }
 
 /* line 25, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card:hover .card-btn {
+.card:hover .card-btn {
   visibility: visible;
 }
 
 /* line 29, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card .title {
+.card .title {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -36,7 +36,7 @@
 }
 
 /* line 38, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card .text {
+.card .text {
   min-height: 2.5em;
   height: 2.5em;
   overflow: hidden;
@@ -46,12 +46,7 @@
 }
 
 /* line 49, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card .tag {
-  font-size: .80em;
-}
-
-/* line 53, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card #tag-wrapper {
+.card #tag-wrapper {
   width: 70%;
   height: auto;
   white-space: nowrap;
@@ -59,13 +54,13 @@
   float: left;
 }
 
-/* line 61, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card .attributes-wrapper {
+/* line 57, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+.card .attributes-wrapper {
   background: inherit;
 }
 
-/* line 65, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card #tag-wrapper-action {
+/* line 61, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+.card #tag-wrapper-action {
   display: inline-block;
   width: 30%;
   position: absolute;
@@ -76,8 +71,8 @@
   background: inherit;
 }
 
-/* line 76, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card #tag-wrapper-action .action {
+/* line 72, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+.card #tag-wrapper-action .action {
   background: none;
   border: none;
   float: right;
@@ -86,13 +81,13 @@
   color: #c2714f;
 }
 
-/* line 85, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card #icon {
+/* line 81, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+.card #icon {
   float: left;
 }
 
-/* line 89, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card .card-btn {
+/* line 85, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+.card .card-btn {
   visibility: hidden;
   position: absolute;
   top: 10px;
@@ -103,59 +98,59 @@
   /* For IE8 and earlier */
 }
 
-/* line 100, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
-.article-card .card-btn:hover {
+/* line 96, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+.card .card-btn:hover {
   opacity: 1;
   filter: alpha(opacity=100);
   /* For IE8 and earlier */
   transition: opacity .2s ease-in-out;
 }
 
-/* line 106, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 102, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .active {
   background: #c4c4c4;
 }
 
-/* line 110, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 106, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .active:hover {
   background: #afafaf;
 }
 
-/* line 115, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 111, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .read .title {
   color: #afafaf;
 }
 
-/* line 118, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 114, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .read .text {
   color: #c4c4c4;
 }
 
-/* line 121, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 117, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .read .tag {
   background: transparent;
   border: 1px solid #c4c4c4;
   color: #c4c4c4;
 }
 
-/* line 129, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 125, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .active-read .title {
   color: #6f6f6f;
 }
 
-/* line 132, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 128, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .active-read .text {
   color: #848484;
 }
 
-/* line 135, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 131, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 .active-read .tag {
   background: transparent;
   border: 1px solid #848484;
   color: #848484;
 }
 
-/* line 142, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 138, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 #end-of-stream {
   height: 100%;
   text-align: center;
@@ -168,12 +163,12 @@
   padding: 0;
 }
 
-/* line 154, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 150, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 #end-of-stream:hover {
   background: #fff;
 }
 
-/* line 158, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 154, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 #end-of-stream #wrapper:before {
   content: '';
   height: 100%;
@@ -181,7 +176,7 @@
   vertical-align: middle;
 }
 
-/* line 165, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 161, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 #end-of-stream #wrapper {
   position: relative;
   height: 100%;
@@ -190,7 +185,7 @@
   width: 100%;
 }
 
-/* line 173, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
+/* line 169, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/card.scss */
 #end-of-stream #wrapper div {
   display: inline-block;
   vertical-align: middle;
