Support for href and uuid

--- a/templates/info-popover.html
+++ b/templates/info-popover.html
@@ -9,7 +9,7 @@
     <div class="pull-left">ID: </div>
     <div class="pull-right">
     	&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="{{articles[currentIndex].articleLink}}" target="_blank">
+        <a href="{{articles[currentIndex].link}}" target="_blank">
         	<b>{{articles[currentIndex].id}}</b></div>
         </a>
     <br>
